# carrot

./: .gitignore  .pdm-python  README.md  bot.py  drizzle.config.ts  logging_config.json  package.json  pnpm-lock.yaml  pyproject.toml  worker-configuration.d.ts  wrangler.jsonc  wrangler.toml
.github/workflows/: release.yml
migrations/: 0000_omniscient_mindworm.sql
migrations/meta/: 0000_snapshot.json  _journal.json
src/: api.py  config.py  index.ts  main.py
src/bot/: ptb.py
src/common/: log.py
src/core/: db.ts  schema.ts  types.ts
telegram_bot/: Bot.py  app.py  logger.py  main.py  settings.py
telegram_bot/filters/: is_private.py
telegram_bot/routers/: gemini.py  start.py  webhook.py
telegram_bot/routers/dalle/: __init__.py  responder.py  utils.py
telegram_bot/telegram/: bot.py
utils/: logger.py
