[project]
name = "carrot"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Muzych", email = "haxk1024@gmail.com"},
]
dependencies = ["python-telegram-bot>=21.10", "fastapi>=0.115.6", "uvicorn>=0.34.0", "dotenv>=0.0.5", "loguru>=0.7.3"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
